fixed contrast issue on mascot site about page

--- a/itis3135/nuclearwhale/styles/default.css
+++ b/itis3135/nuclearwhale/styles/default.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: "Montserrat", "Roboto", sans-serif;
-    background-color: #c9daea;
+    background-color: #fefcfb;
     color: #283f3b;
 }
 
